--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.1
 Django==1.8.17
+django-crispy-forms==1.6.1
+django-registration-redux==1.5
 packaging==16.8
 pyparsing==2.1.10
 six==1.10.0
